--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             border: solid 1px;
             padding: 10px;
             display: flex;
+            cursor: pointer;
         }
         #main div span{
             display: block;
