--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
         #main div span:nth-child(2)::before{
             content: 'R$ ';
         }
+        .DivTrue{
+            background-color: rgba(0, 255, 0, 0.37);
+        }
+        .DivFalse{
+            background-color: rgba(255, 0, 0, 0.308);
+        }
     </style>
 </head>
 <body>
